tdf#107643 Fix paragraph preview line spacing

Change-Id: I265f440ed8133d1fd557bed00f766170fffa6cd5